--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "telegram": "node backend/bot"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
     "mongoose": "^5.11.12",
     "react-redux": "^7.2.2",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "telegraf": "^4.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
